[gd_scene load_steps=26 format=2]

[ext_resource path="res://UI/buttonsmall.png" type="Texture" id=1]
[ext_resource path="res://fonts/wii.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/buttonsmallpressed.png" type="Texture" id=3]
[ext_resource path="res://UI/LineEdit.png" type="Texture" id=5]
[ext_resource path="res://UI/LineEditFocus.png" type="Texture" id=6]
[ext_resource path="res://fonts/ARIALBD 1.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://LineEdit.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Triangle.png" type="Texture" id=9]
[ext_resource path="res://UI/Trianglepressed.png" type="Texture" id=10]
[ext_resource path="res://UI/HugePanel.png" type="Texture" id=11]
[ext_resource path="res://Function Presets/MovingPlatform.gd" type="Script" id=12]
[ext_resource path="res://small.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="Theme" id=20]
PopupMenu/fonts/font = SubResource( 15 )
PopupMenu/icons/radio_checked = ExtResource( 10 )
PopupMenu/icons/radio_unchecked = ExtResource( 9 )
PopupMenu/styles/hover = SubResource( 14 )
PopupMenu/styles/panel = SubResource( 13 )

[sub_resource type="StreamTexture" id=21]

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=24]

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="DynamicFont" id=26]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=27]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=32]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="ImageTexture" id=33]

[node name="Functions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="HugePanel" type="Sprite" parent="."]
position = Vector2( -122, 400 )
texture = ExtResource( 11 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 11.0
margin_top = 169.0
margin_right = 207.0
margin_bottom = 255.0
theme = SubResource( 20 )
custom_fonts/font = ExtResource( 2 )
custom_icons/arrow = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1

[node name="X" parent="." instance=ExtResource( 8 )]
margin_left = 279.0
margin_top = 168.0
margin_right = -1161.0
margin_bottom = -647.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="Y" parent="." instance=ExtResource( 8 )]
margin_left = 474.0
margin_top = 168.0
margin_right = -966.0
margin_bottom = -644.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="Speed" parent="." instance=ExtResource( 8 )]
margin_left = 377.0
margin_top = 230.0
margin_right = -1063.0
margin_bottom = -582.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 11.0
margin_top = 130.0
margin_right = 208.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Point"
text = "Point"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 278.0
margin_top = 130.0
margin_right = 616.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Position"
text = "Position"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 240.0
margin_top = 173.0
margin_right = 279.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
margin_left = 256.0
margin_top = 230.0
margin_right = 371.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Speed:"
text = "Speed:"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 435.0
margin_top = 173.0
margin_right = 474.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
margin_left = 14.0
margin_top = 58.0
margin_right = 620.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 32 )
bbcode_enabled = true
bbcode_text = "[center]Platform"
text = "Platform"

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
margin_left = 14.0
margin_top = 346.0
margin_right = 620.0
margin_bottom = 417.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 32 )
bbcode_enabled = true
bbcode_text = "[center]Track"
text = "Track"

[node name="ChildOptionButton" type="OptionButton" parent="."]
margin_left = 11.0
margin_top = 473.0
margin_right = 207.0
margin_bottom = 559.0
theme = SubResource( 20 )
custom_fonts/font = ExtResource( 2 )
custom_icons/arrow = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1

[node name="ChildX" parent="." instance=ExtResource( 8 )]
margin_left = 279.0
margin_top = 472.0
margin_right = -1161.0
margin_bottom = -343.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="ChildY" parent="." instance=ExtResource( 8 )]
margin_left = 474.0
margin_top = 472.0
margin_right = -966.0
margin_bottom = -340.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 11.0
margin_top = 434.0
margin_right = 208.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Point"
text = "Point"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
margin_left = 278.0
margin_top = 434.0
margin_right = 616.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Position"
text = "Position"

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
margin_left = 93.0
margin_top = 611.0
margin_right = 222.0
margin_bottom = 647.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Visible"
text = "Visible"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
margin_left = 240.0
margin_top = 477.0
margin_right = 279.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
margin_left = 435.0
margin_top = 477.0
margin_right = 474.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="visible" type="CheckBox" parent="."]
margin_left = 39.0
margin_top = 600.0
margin_right = 99.0
margin_bottom = 655.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )
pressed = true

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
margin_left = 369.0
margin_top = 611.0
margin_right = 599.0
margin_bottom = 647.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Reset on Death"
text = "Reset on Death"

[node name="reset" type="CheckBox" parent="."]
margin_left = 304.0
margin_top = 601.0
margin_right = 364.0
margin_bottom = 656.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )
pressed = true

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="X" to="." method="_on_X_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_Y_text_changed"]
[connection signal="text_changed" from="Speed" to="." method="_on_Speed_text_changed"]
[connection signal="item_selected" from="ChildOptionButton" to="." method="_on_ChildOptionButton_item_selected"]
[connection signal="text_changed" from="ChildX" to="." method="_on_ChildX_text_changed"]
[connection signal="text_changed" from="ChildY" to="." method="_on_ChildY_text_changed"]
[connection signal="pressed" from="visible" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
